the dialog is open.

VM settings dialog is now aware of VM state changes while the
dialog is open and updates VM editability accordingly.

Fixed XSS vulnerability

Fixed bug that would not subscribe to events of machines that were
powered on while phpVirtualBox is open.

Added icons from VirtualBox source for Windows 8.1 and 2012.

Updated language files from latest VirtualBox release (4.2.16)

-------------------------------------
	4.2-5	2013-07-11
-------------------------------------
More details pane redraw fixes when VM selection list changes
while VM data is still loading

Fixed multiple IE8 bugs that affected selecting and removing VMs

Fixed bug that would incorrectly set the VRDE host to null if no
consoleHost was configured in config.php
http://code.google.com/p/phpvirtualbox/issues/detail?id=620

Added workaround for VirtualBox bug that generates an error when
taking or restoring snapshots.
http://code.google.com/p/phpvirtualbox/issues/detail?id=614

Fixed bug that would not allow starting VMs if
$vmMemoryStartLimitWarn was enabled in config.php
http://code.google.com/p/phpvirtualbox/issues/detail?id=619

VMs that are selected in the VM list are now selected by default
in the Export Appliance Wizard
http://code.google.com/p/phpvirtualbox/issues/detail?id=629

Fixed bug in ActiveDirectory authentication module that would not
correctly recognize the adminUser setting.
https://code.google.com/p/phpvirtualbox/issues/detail?id=649

Fixed bug that would not allow 'Stuck' VMs to be powered off.
https://code.google.com/p/phpvirtualbox/issues/detail?id=651

Fixed bug that would not allow "." to be entered in an IP address
text box in some cases.
https://code.google.com/p/phpvirtualbox/issues/detail?id=653

Fixed bug in LDAP authentication module that would not allow users
to log in.
https://code.google.com/p/phpvirtualbox/issues/detail?id=687

Canceling the 'First Run' wizard now resumes starting the VM.

-------------------------------------
	4.2-4	2012-11-02